<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asymptotik.rnd.location.activity.MainActivity" >

   <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
   	 	tools:context="com.asymptotik.rnd.location.activity.MainActivity" >

	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:gravity="right"
	        android:text="@string/label_last_updated" />
	
	    <TextView
	        android:id="@+id/label_last_updated"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="20dp"
   	 	tools:context="com.asymptotik.rnd.location.activity.MainActivity" >

	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:gravity="right"
	        android:text="@string/label_latitude" />
	
	    <TextView
	        android:id="@+id/label_latitude"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="20dp"
   	 	tools:context="com.asymptotik.rnd.location.activity.MainActivity" >

	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:gravity="right"
	        android:text="@string/label_longitude" />
	
	    <TextView
	        android:id="@+id/label_longitude"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="20dp"
   	 	tools:context="com.asymptotik.rnd.location.activity.MainActivity" >

	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:gravity="right"
	        android:text="@string/label_samples" />
	
	    <TextView
	        android:id="@+id/label_samples"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="20dp"
   	 	tools:context="com.asymptotik.rnd.location.activity.MainActivity" >

	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:gravity="right"
	        android:text="@string/label_samples_per_second" />
	
	    <TextView
	        android:id="@+id/label_samples_per_second"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="20dp"
   	 	tools:context="com.asymptotik.rnd.location.activity.MainActivity" >

	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:gravity="right"
	        android:text="@string/label_accuracy" />
	
	    <TextView
	        android:id="@+id/label_accuracy"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="50dp"
	    android:paddingRight="50dp"
	    android:layout_gravity="center"
	    android:layout_marginTop="50dp"
	    android:text="@string/button_reset"/>
</LinearLayout>
